--- a/src/components/global/feature/feature.bookshop.yml
+++ b/src/components/global/feature/feature.bookshop.yml
@@ -14,7 +14,7 @@ blueprint:
   title: Text Message in One Minute
   description: We believe that a good email marketing strategy is the key to growth. So we’re helping you grow your business with tools and resources that make email marketing easy.
   button:
-    link: /signup
+    link: /
     text: Try This Free
   reversed: false
 
